@@ -44,6 +44,12 @@
         displayed when logging is active.
 */
 
+AVR_INSN (LDI,         1, 1,    "LDI"    )
+AVR_INSN (MOV,         1, 1,    "MOV"    )
+AVR_INSN (MOVW,        1, 1,    "MOVW"   )
+
+AVR_INSN (LAST_FAST,   0, 0,    "???"    )
+
 AVR_INSN (ADC,         1, 1,    "ADC"    )
 AVR_INSN (ADD,         1, 1,    "ADD"    )
 AVR_INSN (ADIW,        1, 2,    "ADIW"   )
@@ -83,7 +89,6 @@ AVR_INSN (INC,         1, 1,    "INC"    )
 AVR_INSN (JMP,         2, 3,    "JMP"    )
 AVR_INSN (LDD_Y,       1, 2,    "LDD r,Y+q")
 AVR_INSN (LDD_Z,       1, 2,    "LDD r,Z+q")
-AVR_INSN (LDI,         1, 1,    "LDI"    )
 AVR_INSN (LDS,         2, 2+CX, "LDS"    )
 AVR_INSN (LD_X,        1, 2,    "LD r,X" )
 AVR_INSN (LD_X_decr,   1, 2,    "LD r,-X")
@@ -96,8 +101,6 @@ AVR_INSN (LPM,         1, 3,    "LPM"    )
 AVR_INSN (LPM_Z,       1, 3,    "LPM Z"  )
 AVR_INSN (LPM_Z_incr,  1, 3,    "LPM Z+" )
 AVR_INSN (LSR,         1, 1,    "LSR"    )
-AVR_INSN (MOV,         1, 1,    "MOV"    )
-AVR_INSN (MOVW,        1, 1,    "MOVW"   )
 AVR_INSN (MUL,         1, 2,    "MUL"    )
 AVR_INSN (MULS,        1, 2,    "MULS"   )
 AVR_INSN (MULSU,       1, 2,    "MULSU"  )
